httpsroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://192.168.0.94:8080"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - macoredroid295homework.com
    secretName: test
  rules:
  - host: macoredroid295homework.com
    http:
      paths:
      - path: /record(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: record-service
            port:
              number: 8080
